--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -66,6 +66,17 @@ development:
 
     # Ensure all times are UTC in the app side. (default: false)
     # use_utc: false
+
+production:
+  sessions:
+    default:
+      database: test_mongoid_production
+      hosts:
+        - localhost:27017
+      options:
+  options:
+    raise_not_found_error: false
+
 test:
   sessions:
     default:
